[gd_scene load_steps=9 format=4 uid="uid://cun318mi5uwes"]

[ext_resource type="Texture2D" uid="uid://x27de03ak5sm" path="res://assets/map_tileset.png" id="1_wf5th"]
[ext_resource type="Script" path="res://underground_map.gd" id="2_ki7xx"]
[ext_resource type="PackedScene" uid="uid://3v7bsek1cmti" path="res://explosion.tscn" id="3_p68o0"]
[ext_resource type="PackedScene" uid="uid://d150cvo5bxybo" path="res://mined_tile_animation.tscn" id="4_hlmlv"]
[ext_resource type="AudioStream" uid="uid://bbjay8qdygi0u" path="res://assets/stone_falling.wav" id="5_7macs"]
[ext_resource type="AudioStream" uid="uid://bg5v4nmbou22h" path="res://assets/stone_digging.wav" id="6_k258v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ymp7h"]
texture = ExtResource("1_wf5th")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_nwomo"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "health"
custom_data_layer_0/type = 0
sources/0 = SubResource("TileSetAtlasSource_ymp7h")

[node name="UndergroundMap" type="TileMapLayer"]
position = Vector2(0, 300)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAADAAAAAAAAAAIAAAADAAAAAAAAAAMAAAADAAAAAAAAAAQAAAADAAAAAAAAAAUAAAADAAAAAAAAAAYAAAADAAAAAAABAAAAAAAAAAAAAAABAAEAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAABAAQAAAADAAAAAAABAAUAAAADAAAAAAABAAYAAAADAAAAAAACAAAAAAAAAAAAAAACAAEAAAADAAAAAAACAAIAAAADAAAAAAACAAMAAAADAAAAAAACAAQAAAADAAAAAAACAAUAAAADAAAAAAACAAYAAAADAAAAAAADAAAAAAAAAAAAAAADAAEAAAADAAAAAAADAAIAAAADAAAAAAADAAMAAAADAAAAAAADAAQAAAADAAAAAAADAAUAAAADAAAAAAADAAYAAAADAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAADAAAAAAAEAAIAAAADAAAAAAAEAAMAAAADAAAAAAAEAAQAAAADAAAAAAAEAAUAAAADAAAAAAAEAAYAAAADAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAADAAAAAAAFAAIAAAADAAAAAAAFAAMAAAADAAAAAAAFAAQAAAADAAAAAAAFAAUAAAADAAAAAAAFAAYAAAADAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAADAAAAAAAGAAIAAAADAAAAAAAGAAMAAAADAAAAAAAGAAQAAAADAAAAAAAGAAUAAAADAAAAAAAGAAYAAAADAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAADAAAAAAAHAAIAAAADAAAAAAAHAAMAAAADAAAAAAAHAAQAAAADAAAAAAAHAAUAAAADAAAAAAAHAAYAAAADAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAADAAAAAAAIAAIAAAADAAAAAAAIAAMAAAADAAAAAAAIAAQAAAADAAAAAAAIAAUAAAADAAAAAAAIAAYAAAADAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAADAAAAAAAJAAIAAAADAAAAAAAJAAMAAAADAAAAAAAJAAQAAAADAAAAAAAJAAUAAAADAAAAAAAJAAYAAAADAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAADAAAAAAAKAAIAAAADAAAAAAAKAAMAAAADAAAAAAAKAAQAAAADAAAAAAAKAAUAAAADAAAAAAAKAAYAAAADAAAAAAALAAAAAAAAAAAAAAALAAEAAAADAAAAAAALAAIAAAADAAAAAAALAAMAAAADAAAAAAALAAQAAAADAAAAAAALAAUAAAADAAAAAAALAAYAAAADAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAADAAAAAAAMAAIAAAADAAAAAAAMAAMAAAADAAAAAAAMAAQAAAADAAAAAAAMAAUAAAADAAAAAAAMAAYAAAADAAAAAAANAAAAAAAAAAAAAAANAAEAAAADAAAAAAANAAIAAAADAAAAAAANAAMAAAADAAAAAAANAAQAAAADAAAAAAANAAUAAAADAAAAAAANAAYAAAADAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAADAAAAAAAOAAIAAAADAAAAAAAOAAMAAAADAAAAAAAOAAQAAAADAAAAAAAOAAUAAAADAAAAAAAOAAYAAAADAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAADAAAAAAAPAAIAAAADAAAAAAAPAAMAAAADAAAAAAAPAAQAAAADAAAAAAAPAAUAAAADAAAAAAAPAAYAAAADAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAADAAAAAAAQAAIAAAADAAAAAAAQAAMAAAADAAAAAAAQAAQAAAADAAAAAAAQAAUAAAADAAAAAAAQAAYAAAADAAAAAAARAAAAAAAAAAAAAAARAAEAAAADAAAAAAARAAIAAAADAAAAAAARAAMAAAADAAAAAAARAAQAAAADAAAAAAARAAUAAAADAAAAAAARAAYAAAADAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAATAAAAAAAEAAAAAAATAAEAAAAEAAAAAAATAAIAAAAEAAAAAAATAAMAAAAEAAAAAAATAAQAAAAEAAAAAAATAAUAAAAEAAAAAAATAAYAAAAEAAAAAAAUAAAAAAAEAAAAAAAUAAEAAAAEAAAAAAAUAAIAAAAEAAAAAAAUAAMAAAAEAAAAAAAUAAQAAAAEAAAAAAAUAAUAAAAEAAAAAAAUAAYAAAAEAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAADAAAAAAAWAAIAAAADAAAAAAAWAAMAAAADAAAAAAAWAAQAAAADAAAAAAAWAAUAAAADAAAAAAAWAAYAAAADAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAADAAAAAAAXAAIAAAADAAAAAAAXAAMAAAADAAAAAAAXAAQAAAADAAAAAAAXAAUAAAADAAAAAAAXAAYAAAADAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAADAAAAAAAYAAIAAAADAAAAAAAYAAMAAAADAAAAAAAYAAQAAAADAAAAAAAYAAUAAAADAAAAAAAYAAYAAAADAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAADAAAAAAAZAAIAAAADAAAAAAAZAAMAAAADAAAAAAAZAAQAAAADAAAAAAAZAAUAAAADAAAAAAAZAAYAAAADAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAADAAAAAAAaAAIAAAADAAAAAAAaAAMAAAADAAAAAAAaAAQAAAADAAAAAAAaAAUAAAADAAAAAAAaAAYAAAADAAAAAAAbAAAAAAAAAAAAAAAbAAEAAAADAAAAAAAbAAIAAAADAAAAAAAbAAMAAAADAAAAAAAbAAQAAAADAAAAAAAbAAUAAAADAAAAAAAbAAYAAAADAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAADAAAAAAAcAAIAAAADAAAAAAAcAAMAAAADAAAAAAAcAAQAAAADAAAAAAAcAAUAAAADAAAAAAAcAAYAAAADAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAADAAAAAAAdAAIAAAADAAAAAAAdAAMAAAADAAAAAAAdAAQAAAADAAAAAAAdAAUAAAADAAAAAAAdAAYAAAADAAAAAAAeAAAAAAAAAAAAAAAeAAEAAAADAAAAAAAeAAIAAAADAAAAAAAeAAMAAAADAAAAAAAeAAQAAAADAAAAAAAeAAUAAAADAAAAAAAeAAYAAAADAAAAAAAfAAAAAAAAAAAAAAAfAAEAAAADAAAAAAAfAAIAAAADAAAAAAAfAAMAAAADAAAAAAAfAAQAAAADAAAAAAAfAAUAAAADAAAAAAAfAAYAAAADAAAAAAAgAAAAAAAAAAAAAAAgAAEAAAADAAAAAAAgAAIAAAADAAAAAAAgAAMAAAADAAAAAAAgAAQAAAADAAAAAAAgAAUAAAADAAAAAAAgAAYAAAADAAAAAAAhAAAAAAAAAAAAAAAhAAEAAAADAAAAAAAhAAIAAAADAAAAAAAhAAMAAAADAAAAAAAhAAQAAAADAAAAAAAhAAUAAAADAAAAAAAhAAYAAAADAAAAAAAiAAAAAAAAAAAAAAAiAAEAAAADAAAAAAAiAAIAAAADAAAAAAAiAAMAAAADAAAAAAAiAAQAAAADAAAAAAAiAAUAAAADAAAAAAAiAAYAAAADAAAAAAAjAAAAAAAAAAAAAAAjAAEAAAADAAAAAAAjAAIAAAADAAAAAAAjAAMAAAADAAAAAAAjAAQAAAADAAAAAAAjAAUAAAADAAAAAAAjAAYAAAADAAAAAAAkAAAAAAAAAAAAAAAkAAEAAAADAAAAAAAkAAIAAAADAAAAAAAkAAMAAAADAAAAAAAkAAQAAAADAAAAAAAkAAUAAAADAAAAAAAkAAYAAAADAAAAAAAlAAAAAAAAAAAAAAAlAAEAAAADAAAAAAAlAAIAAAADAAAAAAAlAAMAAAADAAAAAAAlAAQAAAADAAAAAAAlAAUAAAADAAAAAAAlAAYAAAADAAAAAAAmAAAAAAAAAAAAAAAmAAEAAAADAAAAAAAmAAIAAAADAAAAAAAmAAMAAAADAAAAAAAmAAQAAAADAAAAAAAmAAUAAAADAAAAAAAmAAYAAAADAAAAAAAnAAAAAAAAAAAAAAAnAAEAAAADAAAAAAAnAAIAAAADAAAAAAAnAAMAAAADAAAAAAAnAAQAAAADAAAAAAAnAAUAAAADAAAAAAAnAAYAAAADAAAAAAA=")
tile_set = SubResource("TileSet_nwomo")
script = ExtResource("2_ki7xx")
explosion_scene = ExtResource("3_p68o0")
mined_tile_animation = ExtResource("4_hlmlv")

[node name="TileMinedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7macs")
volume_db = -10.0
bus = &"SFX"

[node name="TileMiningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_k258v")
bus = &"SFX"
